k8s/mongodb-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-client
  template:
    metadata:
      labels:
        app: mongodb-client
    spec:
      containers:
        - name: mongodb-client
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-client
spec:
  selector:
    app: mongodb-client
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
